snitchlist is now a Comma Separated Value file

--- a/src/main/resources/assets/snitchvisualizer/lang/en_US.lang
+++ b/src/main/resources/assets/snitchvisualizer/lang/en_US.lang
@@ -3,3 +3,4 @@ svoptions.listUpdate=Force Snitchlist Update
 svoptions.updateDetection=Update Detection
 svoptions.renderDistance=Render Distance
 svoptions.renderEnabled=Rendering
+svoptions.keyBinding=SV Settings Keybinding
